--- a/index.css
+++ b/index.css
@@ -1,13 +1,22 @@
 body{
-    background-color:rgb(144, 231, 157);
+    font-family: sans-serif;
+    background-image: url(final\ img.webp);
+    text-align: center;
+    height: auto;
+}
+.container{
+    background-color: rgb(227, 217, 217);
+    max-width: 80%;
+    margin: auto;
+    border: 3px solid black;  
 }
 #counter{
-    margin-left: 130px;
+    align-self: center;
+    font-size: bold;
 }
 #increment-btn{
-    border: none;
-    margin-left: 100px;
-    background-color:crimson;
+    border: 2px solid black;
+    background-color:rgb(4, 46, 173);
     border-radius: 5px;
     color: white;
     height: 30px;
@@ -16,9 +25,8 @@ body{
     
 }
 #save-btn{
-    border: none;
-    margin-left: 100px;
-    background-color:rgb(38, 13, 180);
+    border: 2px solid black;
+    background-color:rgb(9, 207, 23);
     border-radius: 5px;
     color: white;
     height: 30px;
