--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background-image: url(final\ img.webp);
+    background-image: url(background.webp);
     text-align: center;
     height: auto;
 }
