--- a/addToCartApp/index.css
+++ b/addToCartApp/index.css
@@ -1,6 +1,18 @@
 html,body{
     font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
+    background-color: #d5d5d7;
+    user-select: none;
+}
+#header{
+    color: #59472b;
+    font-size: x-large;
+    font-weight: bold;
+    font-family:cursive;
+    margin-left: 0px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 2px;
+   
 }
 .container{
     display: flex;
@@ -20,16 +32,48 @@ img{
     padding: 15px;
     font-size: 20px;
     text-align: center;
-    font-family: 'Rubik', sans-serif;
     margin: 10px 0;
 }
+
 #add-btn{
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: #cf2141;
     border: none;
     border-radius: 8px;
     padding: 15px;
     font-size: 20px;
     text-align: center;
-    font-family: 'Rubik', sans-serif;
+    font-family:sans-serif;
+}
+#add-btn:hover{
+    background-color: #c0bd24;
+    cursor:pointer;
+}
+
+ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap:10px;
+    flex-direction: row;
+    padding:0px;
+}
+ul li{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    list-style: none;
+    border-radius: 8px;
+    padding: 13px;
+    color:rgb(160, 19, 19);
+    background-color:wheat;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    flex-grow: 1;
+    font-size: 15px;
+}
+ul li:hover{
+    cursor: pointer;
+    background-color:rgb(255, 255, 255);
+}
+p{
+    color: red;
+    margin-left: 100px;
 }
